--- a/login/login.html
+++ b/login/login.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    
+    <style>
+        .material-symbols-outlined {font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 48;}
+        
+     </style>
     <title>Login</title>
 
 </head>
@@ -17,9 +22,20 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
-                <form action="login.php" method="post">
-                    
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo" id="log">    
+                        <span id="burguer" class="material-symbols-outlined">person</span>
+                        <input type="text" name="log" id="ilog" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilog">Login</label>
+                    </div>  
+                    <div class="campo"> 
+                        <span id="burguer" class="material-symbols-outlined">vpn_key</span>                       
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div> 
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">Esqueci a senha <span id="burguer" class="material-symbols-outlined">mail</span></a>    
                 </form>
             </div>
         </section>
