--- a/harrypotter/sobre.html
+++ b/harrypotter/sobre.html
@@ -14,17 +14,15 @@
             <h2>Sobre</h2>
             <nav>
                 <ul>
-                    <a href="index.html"><li>Inicio</li></a>                
-                    <a href="sobre.html"><li>Sobre</li></a>                
-                        <ul>                        
-                            <a href="#"><li>Enredo</li></a>                        
-                            <a href="#"></a><li>Temática</li></a>
-                            <a href="#"></a><li>Estrutura</li></a>
-                            <a href="#"><li>Origem</li></a>
-                        </ul>                
-                    <li>Curiosidades</li>
-                    <li>Livros</li>
-                    <li>Filmes</li>
+                    <li><a href="index.html">Inicio</a></li>                                   
+                    <li><a href="sobre.html">Sobre</a></li>                                         
+                    <li><a href="#enredo">Enredo</a></li>                        
+                    <li><a href="#tematica">Temática</a></li>
+                    <li><a href="#estrutura">Estrutura</a></li>
+                    <li><a href="#origem">Origem</a></li>                                       
+                    <li><a href="#">Curiosidades</a></li>
+                    <li><a href="#">Livros</a></li>
+                    <li><a href="#">Filmes</a></li> 
                 </ul>
             </nav>
         </header>
