--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -13,17 +13,15 @@
         <h2>Início</h2>
         <nav>
             <ul>
-                <a href="index.html"><li>Inicio</li></a>                
-                <a href="sobre.html"><li>Sobre</li></a>                
-                    <ul>                        
-                        <a href="#"><li>Enredo</li></a>                        
-                        <a href="#"></a><li>Temática</li></a>
-                        <a href="#"></a><li>Estrutura</li></a>
-                        <a href="#"><li>Origem</li></a>
-                    </ul>                
-                <li>Curiosidades</li>
-                <li>Livros</li>
-                <li>Filmes</li>
+                <li><a href="index.html">Inicio</a></li>                
+                <li><a href="sobre.html">Sobre</a></li>                                          
+                <li><a href="#enredo">Enredo</a></li>                        
+                <li><a href="#tematica">Tematica</a></li>
+                <li><a href="#estrutura">Estrutura</a></li>
+                <li><a href="#origem">Origem</a></li>                                                
+                <li><a href="#">Curiosidades</a></li>
+                <li><a href="#">Livros</a></li>
+                <li><a href="#">Filmes</a></li>
             </ul>
         </nav>
     </header>    
@@ -33,11 +31,12 @@
             <p>Harry Potter é uma série de sete romances de fantasia escrita pela autora britânica J. K. Rowling. A série narra as aventuras de um jovem chamado Harry James Potter, que descobre aos 11 anos de idade que é um bruxo ao ser convidado para estudar na Escola de Magia e Bruxaria de Hogwarts. O arco de história principal diz respeito às amizades de Harry com outros bruxos de sua idade, como Ron Weasley e Hermione Granger, e também com o diretor de Hogwarts Albus Dumbledore, considerado o maior dos magos, e seus conflitos com o bruxo das trevas Lord Voldemort, que pretende se tornar imortal, conquistar o mundo dos bruxos, subjugar as pessoas não-mágicas e destruir todos aqueles que estão em seu caminho, especialmente Harry Potter, a quem ele considera seu maior rival.</p>
             <p>Desde o lançamento do primeiro romance, Harry Potter e a Pedra Filosofal, em 26 de junho de 1997, os livros ganharam uma imensa popularidade, aclamação da crítica e foram um sucesso comercial em todo o mundo.A série também recebeu algumas críticas, incluindo a preocupação com o tom cada vez mais sombrio conforme a história progredia. Até maio de 2015, já haviam sido vendidas 450 milhões de cópias em todo o mundo, tornando a série a best-seller da história, sendo traduzida para 73 idiomas. Os últimos quatro livros consecutivamente foram considerados os mais vendidos da história, sendo que o último livro vendeu cerca de 11 milhões de cópias nos Estados Unidos nas primeiras 24 horas após o seu lançamento.</p>
             <p>A série abrange vários gêneros, como fantasia, vida escolar e passagem entre a infância e a juventude (com elementos de mistério, suspense, aventura e romance), sendo que a história tem muitos significados e referências culturais. De acordo com Rowling, o tema principal é a morte. Há também muitas outras temáticas na série, como preconceito e corrupção.</p>
-            <p>Os livros foram originalmente impressos em inglês por duas grandes editoras, a Bloomsbury do Reino Unido e a Scholastic Press nos Estados Unidos. A série já foi publicada por muitas editoras em todo o mundo. A adaptação para uma série composta por oito filmes feita pela Warner Bros. Pictures se tornou a série cinematográfica mais assistida da história. Tamanho sucesso fez com que a marca Harry Potter chegasse ao valor de 15 bilhões de dólares. Além disso, o parque temático The Wizarding World of Harry Potter foi introduzido em diversas unidades da Universal Parks & Resorts.</p>
-            <footer>
-                
-            </footer>
+            <p>Os livros foram originalmente impressos em inglês por duas grandes editoras, a Bloomsbury do Reino Unido e a Scholastic Press nos Estados Unidos. A série já foi publicada por muitas editoras em todo o mundo. A adaptação para uma série composta por oito filmes feita pela Warner Bros. Pictures se tornou a série cinematográfica mais assistida da história. Tamanho sucesso fez com que a marca Harry Potter chegasse ao valor de 15 bilhões de dólares. Além disso, o parque temático The Wizarding World of Harry Potter foi introduzido em diversas unidades da Universal Parks & Resorts.</p>            
         </article>
+        <footer>
+            <p>Site criado por <a href="#" target="_blank">Roberson Mariani</a>. Todos os direitos reservado.</p>
+ 
+        </footer>
     </main>
 </body>
 </html>
