--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -34,7 +34,7 @@
             <p>Os livros foram originalmente impressos em inglês por duas grandes editoras, a Bloomsbury do Reino Unido e a Scholastic Press nos Estados Unidos. A série já foi publicada por muitas editoras em todo o mundo. A adaptação para uma série composta por oito filmes feita pela Warner Bros. Pictures se tornou a série cinematográfica mais assistida da história. Tamanho sucesso fez com que a marca Harry Potter chegasse ao valor de 15 bilhões de dólares. Além disso, o parque temático The Wizarding World of Harry Potter foi introduzido em diversas unidades da Universal Parks & Resorts.</p>            
         </article>
         <footer>
-            <p>Site criado por <a href="#" target="_blank">Roberson Mariani</a>. Todos os direitos reservado.</p>
+            <p>Site criado por <a href="#" target="_blank">R. G. Mariani</a>. Todos os direitos reservado.</p>
  
         </footer>
     </main>
