--- a/harrypotter/sobre.html
+++ b/harrypotter/sobre.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/sobre.css">
+    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
+    <script src="scripts/script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Harry Potter Sobre</title>
 </head>
 <body>
@@ -12,17 +15,21 @@
         <header>
             <h1>Harry Potter</h1>
             <h2>Sobre</h2>
-            <nav>
+            <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <nav id="itens">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>                                   
-                    <li><a href="sobre.html">Sobre</a></li>                                         
-                    <li><a href="#enredo">Enredo</a></li>                        
-                    <li><a href="#tematica">Temática</a></li>
-                    <li><a href="#estrutura">Estrutura</a></li>
-                    <li><a href="#origem">Origem</a></li>                                       
+                    <li><a href="index.html">Inicio</a></li>                
+                    <li><a href="#" onclick="clickSobre()" id="">Sobre</a> 
+                    <ul id="sobre">
+                        <li><a href="sobre.html#enredo">Enredo</a></li>                        
+                        <li><a href="sobre.html#tematica">Tematica</a></li>
+                        <li><a href="sobre.html#estrutura">Estrutura</a></li>
+                        <li><a href="sobre.html#origem">Origem</a></li>
+                    </ul> 
+                    </li>                                                                                        
                     <li><a href="#">Curiosidades</a></li>
                     <li><a href="#">Livros</a></li>
-                    <li><a href="#">Filmes</a></li> 
+                    <li><a href="#">Filmes</a></li>
                 </ul>
             </nav>
         </header>
