--- a/harrypotter/sobre.html
+++ b/harrypotter/sobre.html
@@ -70,5 +70,9 @@
             <p>Após quase uma década da publicação do primeiro livro, Harry Potter alcançou muito sucesso em parte por causa de críticas positivas, estratégias de marketing de suas editoras, mas também pela propaganda boca-a-boca entre muitos leitores. As editoras de Rowling estiveram aptas a aumentar este fervor pelo lançamento rápido e sucessivo dos três primeiros livros, o que fez com que nem a excitação nem o interesse da audiência de Rowling caíssem. A série também conquistou fãs adultos, fazendo com que, em muitos países, cada livro tivesse duas edições, assim como os audio-books, com texto ou áudio idênticos, mas com capas diferentes, uma delas direcionada a crianças e a outra, a adultos.</p>
         </section>
     </main>
+    <footer>
+        <p>Site criado por <a href="#" target="_blank">R. G. Mariani</a>. Todos os direitos reservado.</p>
+
+    </footer>
 </body>
 </html>
