--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -12,15 +12,14 @@
     <title>Harry Potter Início</title>
 </head>
 <body onresize="mudouTamanho()">
-    <header>
-        
+    <header>        
         <h1>Harry Potter</h1>
         <h2>Início</h2>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <nav id="itens">
             <ul>
                 <li><a href="index.html">Inicio</a></li>                
-                <li><a href="#" onclick="clickSobre()" id="">Sobre</a> 
+                <li><a href="#" onclick="clickSobre()">Sobre</a> 
                 <ul id="sobre">
                     <li><a href="sobre.html#enredo">Enredo</a></li>                        
                     <li><a href="sobre.html#tematica">Tematica</a></li>
