--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -11,7 +11,7 @@
     
     <title>Harry Potter Início</title>
 </head>
-<body onresize="mudouTamanho()">
+<body onresize="mudouTamanho()" onload="carregarSobre()" >
     <header>        
         <h1>Harry Potter</h1>
         <h2>Início</h2>
