Pag Curisosidade texto

--- a/harrypotter/curiosidades.html
+++ b/harrypotter/curiosidades.html
@@ -27,7 +27,7 @@
                     <li><a href="sobre.html#origem">Origem</a></li>
                 </ul> 
                 </li>                                                                                         
-                <li><a href="#">Curiosidades</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
                 <li><a href="#">Livros</a></li>
                 <li><a href="#">Filmes</a></li>
             </ul>
@@ -35,7 +35,50 @@
     </header> 
     
     <main>
-
+        <section>
+            <h2>Um dos principais desfechos finais da série foi escrito em um esboço ainda no primeiro ano.</h2>
+            <p>A cena emocionante onde Hagrid carrega Harry “morto” em seus braços para fora da floresta foi pensada por J.K. Rowling logo no primeiro ano de escrita da saga</p>
+        </section>
+        <section>
+            <h2>Os nomes das casas de Hogwarts foram inventados de forma inusitada</h2>
+            <p>A autora foi questionada por algumas crianças em uma entrevista sobre como ela inventou os nomes das casas de Hogwarts e a resposta foi a mais sincera possível: “Eu inventei os nomes das Casas escrevendo na parte de trás de um saco de enjoo de avião! Isso é verdade.</p>
+        </section>
+        <section>
+            <h2>Arthur Weasley iria morrer nos filmes</h2>
+            <p>A autora revelou em entrevista, que após o ataque que ele sofre de Nagini em ‘Ordem da Fênix’ sua ideia era matá-lo.</p>
+            <p>Mas ela desistiu depois de pensar bem e perceber que ele era um dos únicos pais ‘bons’ que ainda restavam na trama.</p>
+        </section>
+        <section>
+            <h2>Os Dementadores em Harry Potter são baseados na luta de J.K. Rowling contra a depressão após a morte de sua mãe</h2>
+            <p>Em entrevista à Oprah, J.K. revelou que após a morte de sua mãe em 1990, ela entrou em um estado de depressão, uma doença difícil de explicar. Por isso, os Dementadores se alimentam de emoções humanas, além de trazerem o vazio e ausência de sentimento.</p>
+        </section>
+        <section>
+            <h2>Harry não tem os olhos verdes nos filmes por uma boa razão</h2>
+            <p>Na pré-produção de ‘Pedra Filosofal’, consultaram J.K e deram duas opções para a situação: usar lentes de contato ou mudar a cor dos olhos na pós-produção.</p>
+            <p>Ela respondeu que a cor em si não era tão importante, mas que Harry era conhecido por ter os ‘olhos da mãe’, ou seja, a cor dos olhos da atriz precisaria parecer com os dele. Então, manteve-se os olhos azuis do ator que não recebeu bem as lentes verdes.</p>
+        </section>
+        <section>
+            <h2>J.K. reconheceu que Harry e Hermione poderiam ter funcionado juntos</h2>
+            <p>Em uma entrevista com Emma Watson em 2014, a autora disse que em alguns aspectos Harry e Hermione funcionavam melhor juntos e ela sentiu isso fortemente quando escreveu a cena da tenda onde os dois ficam sozinhos em ‘Relíquias da Morte’</p>
+            <p>Ela ainda revelou que a relação de Ron e Hermione tinha que acabar daquele jeito por tudo que foi construído pelo enredo que ela inicialmente imaginou e se manteve assim até o final.</p>
+        </section>
+        <section>
+            <h2>O teste de Rupert Grint foi incomum</h2>
+            <p>Rupert conta que descobriu na época que o teste poderia ser feito mandando um material e algumas informações para a Newsround e foi o que ele fez!</p>
+            <p>O pequeno fez seu próprio vídeo fingindo ser sua professora de teatro e um rap de sua própria autoria falando de como ele queria ser Ron e enviou.</p>
+        </section>
+        <section>
+            <h2>J.K. conversou com Alan Rickman sobre alguns desfechos de Snape</h2>
+            <p>J.K contou a Alan muito cedo que Snape era apaixonado por Lily e por isso que ele odiava o pai de Harry, que fez projetar essa implicância com o bruxinho. Isso o ajudou na construção do personagem.</p>
+        </section>
+        <section>
+            <h2>A atriz que interpretou a ‘Murta que geme’ em ‘Câmera Secreta’ era mais velha do que uma estudante</h2>
+            <p>Shirley Henderson interpretou a ‘Murta que Geme’ no segundo filme da saga. A personagem era um fantasma de uma menina de 14 anos que foi morta pelo olhar do basilisco e na época, ela tinha 36 anos.</p>
+        </section>
+        <section>
+            <h2>Helena Bonham Carter manteve seus dentes de Bellatrix</h2>
+            <p>Helena Bonham deu vida a polêmica vilã Bellatrix Lestrange na trama e a atriz usava uma espécie de dentadura para modificar seus dentes para a personagem. Ela gostou tanto dos novos dentes que guarda até hoje em seu banheiro para vez ou outra colocar e relembrar da Bellatrix.</p>
+        </section>
     </main>
 
     <footer>
