--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -27,7 +27,7 @@
                     <li><a href="sobre.html#origem">Origem</a></li>
                 </ul> 
                 </li>                                                                                         
-                <li><a href="#">Curiosidades</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
                 <li><a href="#">Livros</a></li>
                 <li><a href="#">Filmes</a></li>
             </ul>
