--- a/harrypotter/curiosidades.html
+++ b/harrypotter/curiosidades.html
@@ -79,6 +79,84 @@
             <h2>Helena Bonham Carter manteve seus dentes de Bellatrix</h2>
             <p>Helena Bonham deu vida a polêmica vilã Bellatrix Lestrange na trama e a atriz usava uma espécie de dentadura para modificar seus dentes para a personagem. Ela gostou tanto dos novos dentes que guarda até hoje em seu banheiro para vez ou outra colocar e relembrar da Bellatrix.</p>
         </section>
+        <section>
+            <h2>Tom Felton e docinhos</h2>
+            <p>Tom Felton levava docinhos e petiscos escondidos para o set nos bolsos de suas roupas. Quando foi descoberto, os bolsos dos seus figurinos passaram a ser falsos.</p>
+        </section>
+        <section>
+            <h2>Trem de Hogwarts vandalizado</h2>
+            <p>O trem usado como o Expresso de Hogwarts foi vandalizado entre as gravações de "A Câmara Secreta" e "O Prisioneiro de Azkaban".</p>
+            <p>Foram £3.000 em danos, após os vagões do trem serem pichados com tinta spray verde e prata durante a noite.</p>
+        </section>
+        <section>
+            <h2>Frases de Malfoy improvisadas</h2>
+            <p>A frase de Malfoy "Eu não sabia que você podia ler" foi improvisada pelo diretor Chris Columbus. Tom Felton disse que esse foi um dos momentos favoritos da série para ele.</p>
+        </section>
+        <section>
+            <h2>A porta da Câmara Secreta não é uma imagem gerada por computador: é tudo mecânico e funciona até hoje.</h2>
+            <p>Você pode ver um vídeo da porta fazendo sua mágica no Warner Bros. Studio Tour em Londres <a href="https://www.youtube.com/watch?v=zOYzHtiDbkQ">aqui</a>. Infelizmente, ela não se move para qualquer visitante — a sua mecânica é delicada, então, vê-la se mover é uma raridade.</p>            
+        </section>
+        <section>
+            <h2>A varinha de Harry muda entre o segundo e o terceiro filmes.</h2>
+            <p>De acordo com o site <a href="https://www.wizardingworld.com/features/designing-harry-potter-wands">Pottermore</a>, o design da varinha "evoluiu ao longo dos filmes". Antes do início das gravações em "O Prisioneiro de Azkaban", o diretor Alfonso Cuarón ofereceu aos atores uma seleção de novas varinhas para escolherem. Daniel Radcliffe escolheu uma varinha mais curta, a qual o diretor de arte Hattie Storey chamou de "mais misteriosa e mágica".</p>
+        </section>
+        <section>
+            <h2> E Daniel Radcliffe usou cerca de 80 varinhas durante as gravações, já que ele as estragava sem querer.</h2>
+            <p>Em média, a equipe de adereços fazia seis varinhas para cada personagem, mas acabou produzindo cerca de 80 para Dan, porque ele ficava brincando com elas como uma baqueta, desgastando a tinta.</p>
+        </section>
+        <section>
+            <h2>J.K. Rowling recebeu a oferta para fazer o papel de Lily Potter nas cenas de flashback do primeiro filme, mas recusou.</h2>
+            <p>Ela disse não para o papel, pois sentia que não servia como atriz.</p>
+        </section>
+        <section>
+            <h2>Bonecos dementadores com efeitos diferenciados</h2>
+            <p>Os bonecos usados para criar os Dementadores foram filmados debaixo d'água e, em seguida, animados para produzirem o estranho efeito flutuante que vemos nos filmes.</p>
+            <p>As imagens feitas sob a água serviram de referência para as imagens dos Dementadores criadas por computador.</p>
+        </section>
+        <section>
+            <h2>Emma Watson e seu pequeno hamster</h2>
+            <p>Emma Watson tinha um hamster no set durante as gravações do primeiro filme. Quando ele morreu, o departamento de adereços fez um pequeno caixão do tamanho do hamster para enterrá-lo.</p>
+        </section>
+        <section>
+            <h2>Harry não lança nenhum feitiço durante o primeiro filme.</h2>
+            <p>Ele executa magia sem varinha, como quando faz o vidro desaparecer no zoológico, e faz coisas mágicas acontecerem quando está segurando uma varinha, como no Olivaras. No entanto, ele nunca lança um feitiço com sucesso, dizendo o encantamento em voz alta.</p>
+        </section>
+        <section>
+            <h2>O ator que interpreta o jovem Voldemort em "O Príncipe Mestiço" — Hero Fiennes-Tiffin — é sobrinho de Ralph Fiennes, que interpreta o Voldemort mais velho.</h2>
+            <p>Mas não foram as conexões familiares que o levaram ao papel, de acordo com o diretor David Yates.</p>
+            <p>"Foi uma vantagem ele ser muito parecido com o Ralph... mas principalmente eu escolhi o Hero por causa desta maravilhosa qualidade assombrada que, para nós, parecia trazer Tom Riddle de volta à vida na tela", disse Yates ao "USA Today" em 2008.</p>
+        </section>
+        <section>
+            <h2>Katie Leung e Lagrimas com Coldplay</h2>
+            <p>Katie Leung, que interpretou Cho Chang, ouvia Coldplay em seu camarim para que fosse mais fácil começar a chorar nas cenas.</p>
+        </section>
+        <section>
+            <h2>Dolores Umbridge e suas roupas que mudam de tom</h2>
+            <p>"Eu comecei com um rosa mais claro, e então, à medida que o filme se desenvolvia, os rosas ficavam cada vez mais escuros porque ela estava ficando cada vez mais histérica", disse a designer de figurino Jany Temime.</p>
+        </section>
+        <section>
+            <h2>Dame Maggie Smith estava lutando contra o câncer de mama durante as gravações de "O Príncipe Mestiço".</h2>
+            <p>"Eu estava sem cabelo, mas não tive nenhum problema em colocar a peruca", disse ao "The Times" em 2009. "Os últimos dois anos foram inúteis, embora eu esteja começando a me sentir como uma pessoa agora. Minha energia está voltando. Merdas acontecem. Eu devo recuperar meu autocontrole um pouco".</p>
+        </section>
+        <section>
+            <h2>Emma Watson da dicas de como interpretar o seu personagem</h2>
+            <p>Emma Watson enviou mensagens de texto para Helena Bonham-Carter com dicas para se preparar para a cena onde Hermione se transforma em Bellatrix para se infiltrar em Gringotts.</p>
+            <p>"É uma maneira realmente interessante de se trabalhar, porque de repente você se torna ciente dos seus maneirismos", disse Emma sobre quando ajudou Helena a se preparar para o papel. "Assistir à Helena me interpretar foi bizarro. Ela é excepcional."</p>
+        </section>
+        <section>
+            <h2>Levou 95 tomadas para filmar a cena dos sete Potters no início de "As Relíquias da Morte Parte 1".</h2>
+            <p>Ainda que tenha demorado em torno de 12 tomadas para que Daniel Radcliffe pegasse os maneirismos de cada personagem, ele interpretou Hermione de forma perfeita já na primeira tentativa.</p>
+        </section>
+        <section>
+            <h2>Emma Watson expulsa Rupert Grint para fora do set</h2>
+            <p>Emma Watson expulsou Rupert Grint para fora do set durante a cena onde a Horcrux de Harry beija a Horcrux de Hermione, porque ele não parava de rir.</p>
+            <p>"Acabei achando aquilo muito engraçado. Emma me mandou para fora porque eu continuava rindo. Aquilo simplesmente parecia muito estranho", disse Rupert.</p>
+        </section>
+        <section>
+            <h2>Coisas levadas após as filmagens</h2>
+            <p>Quando os filmes terminaram, Daniel Radcliffe levou os primeiros e os últimos pares de óculos de Harry para casa. Já Rupert Grint levou o Desiluminador e o número 4 da casa na rua dos Alfeneiros, e Emma Watson levou uma varinha, uma túnica e o Vira-tempo.</p>
+            <p>Rupert também revelou que tentou levar um ovo dourado do Torneio Tribruxo do quarto filme, mas foi pego e teve que devolvê-lo.</p>
+        </section>
     </main>
 
     <footer>
