--- a/harrypotter/curiosidades.html
+++ b/harrypotter/curiosidades.html
@@ -11,7 +11,7 @@
     
     <title>Harry Potter Início</title>
 </head>
-<body onresize="mudouTamanho()" onload="carregarSobre()" >
+<body onresize="mudouTamanho()" onload="carregarSobre()" class="curi">
     <header>        
         <h1>Harry Potter</h1>
         <h2>Início</h2>
@@ -34,7 +34,7 @@
         </nav>
     </header> 
     
-    <main>
+    <main class="curi">
         <section>
             <h2>Um dos principais desfechos finais da série foi escrito em um esboço ainda no primeiro ano.</h2>
             <p>A cena emocionante onde Hagrid carrega Harry “morto” em seus braços para fora da floresta foi pensada por J.K. Rowling logo no primeiro ano de escrita da saga</p>
