--- a/harrypotter/sobre.html
+++ b/harrypotter/sobre.html
@@ -11,7 +11,7 @@
     <title>Harry Potter Sobre</title>
 </head>
 <body>
-    <body onresize="mudouTamanho()" onload="carregarSobre()">
+    <body onresize="mudouTamanho()" onload="carregarSobre()" class="curi">
         <header>
             <h1>Harry Potter</h1>
             <h2>Sobre</h2>
