--- a/harrypotter/curiosidades.html
+++ b/harrypotter/curiosidades.html
@@ -162,3 +162,6 @@
     <footer>
         <p>Site criado por <a href="#" target="_blank">R. G. Mariani</a>. Todos os direitos reservado.</p>
     </footer>
+
+</body>
+</html>
