--- a/harrypotter/index.html
+++ b/harrypotter/index.html
@@ -28,8 +28,8 @@
                 </ul> 
                 </li>                                                                                         
                 <li><a href="curiosidades.html">Curiosidades</a></li>
-                <li><a href="#">Livros</a></li>
-                <li><a href="#">Filmes</a></li>
+                <li><a href="livros.html">Livros</a></li>
+                <li><a href="filmes.html">Filmes</a></li>
             </ul>
         </nav>
     </header>    
