--- a/harrypotter/livros.html
+++ b/harrypotter/livros.html
@@ -9,12 +9,12 @@
     <script src="scripts/script.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
-    <title>Harry Potter Início</title>
+    <title>Harry Potter Livros</title>
 </head>
 <body onresize="mudouTamanho()" onload="carregarSobre()" class="curi">
     <header>        
         <h1>Harry Potter</h1>
-        <h2>Início</h2>
+        <h2>Livros</h2>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <nav id="itens">
             <ul>
@@ -33,6 +33,10 @@
             </ul>
         </nav>
     </header> 
+
+    <main>
+
+    </main>
 
     <footer>
         <p>Site criado por <a href="#" target="_blank">R. G. Mariani</a>. Todos os direitos reservado.</p>
